# Compile with the following:
# cargo build --release --target wasm32-unknown-unknown
# wasm-bindgen --out-dir .\out\ --target web .\target\wasm32-unknown-unknown\release\picross_w.wasm

[package]
name = "picross_w"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy = "0.9.1"
picross_handler = { git = "https://github.com/BluAtlas/picross_handler"}
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.34"
crossbeam-channel = "0.5.7"


[dependencies.web-sys]
version = "0.3.61"
features = [
    'Window',
    'Document',
    'Element',
    'HtmlCanvasElement',
]

[workspace]
resolver = "2" # wgpu/Bevy needs this

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# compile for size when release
[profile.release]
opt-level = 's'
lto = "thin"